--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -11,15 +11,39 @@
     "language": "اللغة",
     "loading": "جاري التحميل...",
     "error": "خطأ",
-    "success": "نجح"
+    "success": "نجاح",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "forgotPassword": "نسيت كلمة المرور؟",
+    "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+    "dontHaveAccount": "ليس لديك حساب؟",
+    "resetPassword": "إعادة تعيين كلمة المرور",
+    "optional": "اختياري"
+  },
+  "journey": {
+    "currentPhase": "المرحلة الحالية",
+    "phaseChange": {
+      "title": "تم فتح مرحلة جديدة!",
+      "message": "مرحباً بك في {phaseLabel}"
+    }
+  },
+  "housing": {
+    "providers": {
+      "wg_gesucht": "WG-Gesucht",
+      "immobilienscout24": "ImmobilienScout24",
+      "housinganywhere": "HousingAnywhere"
+    }
   },
   "nav": {
     "overview": "نظرة عامة",
-    "housing": "السكن",
+    "housing": "الإسكان",
     "bureaucracy": "البيروقراطية",
     "work": "العمل",
-    "social": "الاجتماعي",
-    "settings": "الإعدادات"
+    "social": "اجتماعي",
+    "notes": "ملاحظات",
+    "calendar": "التقويم",
+    "community": "المجتمع",
+    "settings": "إعدادات"
   },
   "auth": {
     "login": "تسجيل الدخول",
@@ -47,33 +71,8 @@
     "complete": "إتمام الإعداد"
   },
   "dashboard": {
-    "todayTasks": "مهام اليوم",
-    "thisWeek": "هذا الأسبوع",
-    "criticalTasks": "المهام الحرجة",
-    "completedTasks": "مكتمل",
-    "inProgress": "قيد التنفيذ",
-    "todo": "للقيام به",
-    "blocked": "محظور"
-  },
-  "tasks": {
-    "status": "الحالة",
-    "notes": "ملاحظات",
-    "dueDate": "تاريخ الاستحقاق",
-    "importance": "الأهمية",
     "critical": "حرج",
     "high": "عالي",
-    "medium": "متوسط",
-    "dependencies": "التبعيات",
-    "documents": "المستندات",
-    "uploadDocument": "تحميل مستند",
-    "markAsDone": "تحديد كمكتمل",
-    "addNote": "إضافة ملاحظة"
-  },
-  "settings": {
-    "profileInfo": "معلومات الملف الشخصي",
-    "city": "المدينة",
-    "dataManagement": "إدارة البيانات",
-    "exportData": "تصدير بياناتي",
     "exporting": "جاري التصدير...",
     "dangerZone": "منطقة الخطر",
     "deleteAccount": "حذف الحساب",
@@ -112,5 +111,143 @@
     "generating": "جاري الإنشاء...",
     "optional": "اختياري",
     "noResources": "لا توجد موارد عمل متاحة لهذه المهمة بعد."
+  },
+  "notes": {
+    "title": "ملاحظاتي",
+    "subtitle": "تتبع أفكارك والتفاصيل المهمة.",
+    "newNote": "ملاحظة جديدة",
+    "editNote": "تعديل الملاحظة",
+    "noteTitle": "العنوان",
+    "noteContent": "المحتوى",
+    "titlePlaceholder": "مثال: قائمة التحقق للبحث عن شقة",
+    "contentPlaceholder": "اكتب أفكارك هنا...",
+    "emptyState": "لا توجد ملاحظات بعد. ابدأ الكتابة!",
+    "deleteConfirm": "هل أنت متأكد أنك تريد حذف هذه الملاحظة؟",
+    "updated": "محدث",
+    "success": {
+      "created": "تم إنشاء الملاحظة",
+      "updated": "تم تحديث الملاحظة",
+      "deleted": "تم حذف الملاحظة"
+    },
+    "error": {
+      "load": "فشل تحميل الملاحظات",
+      "save": "فشل حفظ الملاحظة",
+      "delete": "فشل حذف الملاحظة",
+      "titleRequired": "العنوان مطلوب"
+    }
+  },
+  "calendar": {
+    "title": "التقويم",
+    "today": "اليوم",
+    "tasksDue": "المهام المستحقة",
+    "events": "الفعاليات",
+    "noTasks": "لا توجد مهام مستحقة هذا اليوم",
+    "noEvents": "لا توجد فعاليات هذا اليوم",
+    "selectDate": "اختر تاريخاً",
+    "selectDatePrompt": "انقر على تاريخ لعرض التفاصيل",
+    "loading": "جاري تحميل التقويم...",
+    "error": "فشل تحميل بيانات التقويم"
+  },
+  "events": {
+    "title": "الفعاليات",
+    "noEvents": "لا توجد فعاليات قادمة",
+    "noEventsDesc": "تحقق لاحقاً من التجمعات الاجتماعية وورش العمل.",
+    "free": "مجاني",
+    "online": "عبر الإنترنت",
+    "viewDetails": "عرض التفاصيل",
+    "detailsUnavailable": "التفاصيل غير متاحة",
+    "error": "فشل تحميل الفعاليات"
+  },
+  "community": {
+    "title": "المجتمع",
+    "tabs": {
+      "forum": "المنتدى",
+      "chat": "دردشة المدينة"
+    },
+    "chat": {
+      "comingSoon": "دردشة المدينة قريباً",
+      "desc": "تواصل مع المغتربين الآخرين في مدينتك في الوقت الفعلي. نحن نضع اللمسات الأخيرة على هذه الميزة."
+    },
+    "forum": {
+      "recentDiscussions": "المناقشات الأخيرة",
+      "newTopic": "موضوع جديد",
+      "noTopics": "لا توجد مواضيع بعد",
+      "noTopicsDesc": "كن أول من يبدأ مناقشة!",
+      "replies": "ردود",
+      "backToDiscussions": "العودة للمناقشات",
+      "reply": "رد",
+      "writeReply": "اكتب رداً...",
+      "noReplies": "لا توجد ردود بعد. كن أول من يرد!",
+      "createTopic": "بدء مناقشة جديدة",
+      "topicTitle": "العنوان",
+      "topicCategory": "الفئة",
+      "topicContent": "المحتوى",
+      "titlePlaceholder": "ما الذي يدور في ذهنك؟",
+      "contentPlaceholder": "شارك أفكارك، أسئلتك، أو تجاربك...",
+      "postTopic": "نشر الموضوع",
+      "posting": "جاري النشر...",
+      "categories": {
+        "general": "مناقشة عامة",
+        "housing": "الإسكان",
+        "bureaucracy": "البيروقراطية",
+        "social": "الحياة الاجتماعية",
+        "jobs": "الوظائف والمهنة"
+      },
+      "success": {
+        "created": "تم إنشاء الموضوع بنجاح",
+        "replyPosted": "تم نشر الرد"
+      },
+      "error": {
+        "loadTopics": "فشل تحميل المواضيع",
+        "loadReplies": "فشل تحميل الردود",
+        "createTopic": "فشل إنشاء الموضوع",
+        "postReply": "فشل نشر الرد",
+        "fillAll": "يرجى ملء جميع الحقول"
+      }
+    }
+  },
+  "overview": {
+    "title": "نظرة عامة",
+    "subtitle": "لمحة عن رحلتك لمدة 90 يوماً",
+    "totalTasks": "إجمالي المهام",
+    "completed": "مكتمل",
+    "inProgress": "قيد التنفيذ",
+    "blocked": "محظور",
+    "todo": "للقيام به",
+    "moduleProgress": "تقدم الوحدة",
+    "criticalTasks": "المهام الحرجة",
+    "noCriticalTasks": "لا توجد مهام حرجة معلقة",
+    "noCriticalTasksDesc": "أنت على اطلاع دائم بجميع العناصر ذات الأولوية العالية!"
+  },
+  "tasks": {
+    "importance": {
+      "critical": "حرج",
+      "high": "عالي",
+      "medium": "متوسط",
+      "low": "منخفض"
+    },
+    "detail": {
+      "description": "الوصف",
+      "status": "الحالة",
+      "notes": "ملاحظات",
+      "documents": "المستندات",
+      "dependencies": "التبعيات",
+      "blockedBy": "هذه المهمة محظورة بواسطة",
+      "completeFirst": "أكمل هذه المهام أولاً:",
+      "saveChanges": "حفظ التغييرات",
+      "saving": "جاري الحفظ...",
+      "close": "إغلاق",
+      "upload": "تحميل مستند (PDF, JPG, PNG, بحد أقصى 10MB)",
+      "uploading": "جاري التحميل...",
+      "deleteDocConfirm": "هل أنت متأكد أنك تريد حذف هذا المستند؟",
+      "notesPlaceholder": "أضف ملاحظاتك هنا...",
+      "subtasks": "المهام الفرعية",
+      "statusUpdated": "تم تحديث الحالة: {status}",
+      "mySubtasks": "مهامي الفرعية",
+      "addSubtaskPlaceholder": "أضف مهمة فرعية..."
+    },
+    "card": {
+      "dependencies": "تبعية"
+    }
   }
 }
